[package]
name = "hash-based-signatures-webapp"
version = "0.1.0"
authors = ["Georg Wiese <georgwiese@gmail.com>"]
description = "A sample project with wasm-pack"
repository = "https://github.com/georgwiese/hash-based-signatures-webapp"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"